fix z-index so that the button is clickable in Vega charts

--- a/css/components/app/explore/dataset_widget.scss
+++ b/css/components/app/explore/dataset_widget.scss
@@ -11,6 +11,7 @@
     position: absolute;
     right: 5px;
     top: 5px;
+    z-index: 4;
     cursor: pointer;
   }
 
